<resources>
  <string name="app_name">Clean</string>
  <string name="error_exception_default">There was an application error</string>
  <string name="error_exception_network">There is no internet connection</string>
  <string name="error_exception_user_null">Cannot retrieve user data. Check your internet connection</string>
  <string name="prompt_url">http://www.android10.org/</string>

  <string name="title_user_list">Users List</string>
  <string name="title_user_details">User Details</string>

  <string name="action_load_data">Load Sample Data</string>
  <string name="action_retry">Retry</string>

  <string name="label_email">Email:</string>
  <string name="label_followers">Followers:</string>
  <string name="label_description">Description:</string>

  <string name="prompt_content_description">Non accessible view</string>
</resources>
