<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal"
    tools:context=".view.home.MainActivity"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/prompt_url"
      />

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:contentDescription="@string/prompt_content_description"
      android:src="@drawable/logo"
      />

  <Button
      android:id="@+id/loadData"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="loadData"
      android:text="@string/action_load_data"
      />

</LinearLayout>
