<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iv_cover_height"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/prompt_content_description"
        />

    <TextView
        android:id="@+id/fullName"
        style="@style/AppTheme.TextViewHeader"
        />

    <TextView
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:text="@string/label_email"
        style="@style/AppTheme.TextViewTitle"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        />

    <TextView
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:text="@string/label_followers"
        style="@style/AppTheme.TextViewTitle"
        />

    <TextView
        android:id="@+id/followers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        />

    <TextView
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:text="@string/label_description"
        style="@style/AppTheme.TextViewTitle"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        />

  </LinearLayout>

  <include layout="@layout/view_progress" />

  <ViewStub
      android:id="@+id/stub_retry"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout="@layout/view_retry"
      />
</FrameLayout>